--- a/default.css
+++ b/default.css
@@ -36,7 +36,10 @@ html, body{
 body *{
 	transition: 0.3s;
 }
-
+#book{
+	height: 30px;
+	width: 40px;
+}
 
 h1, h2, h3, h4, h5, h6, strong{
 	color: var(--mainText);
